
  * add hook Role.after_save:

    * creates Contributor with same email, org_id and name (if not exists) as role.user
    * copies orcid identifiers from role.user.identifiers

  * add hook Identifier.after_save:

    when an Identifier of model User is saved,
    and has scheme "orcid", then it is copied
    to all contributors with the same email as that user


- app/controllers/ugent/selectable_user_controller.rb

  ugent specific controller

  when user authenticates with orcid,
  and this orcid matches with multiple users at this end,
  this controller shows a select box from which one
  can choose the user to login to

  this use case is necessary to accomodate for users
  that are part of multiple organisations,
  but for some reason only have orcid as a login method.

- app/controllers/ugent/switch_user_controller.rb

  ugent specific controller

  if a user has an orcid that matches with other user accounts
  he/she can switch to that other user account

  differences with selectable_user_controller.rb:
    * only the OTHER users accounts are shown in the select box
    * happens when already logged in

- app/controllers/ugent/internal/exports_controller.rb

  ugent specific controller (deprecated)

  provides access to JSON exports of plans per organisation in /opt/dmponline_internal

  authenticates with basic auth

  username and password is drawn from attributes "code" and "token" of model Ugent::RestUser respectively

  When removed, remove also:
    - methods Plan.ld_uri and Plan.ld_uri in config/initializers/ugent.rb
    - file lib/tasks/ugent_deprecated.rake
    - routes starting with /internal from config/routes/ugent.rb
    - model Ugent::RestUser

  See also:

    - app/models/ugent/rest_user.rb
    - config/routes/ugent.rb
    - config/initializers/ugent.rb
    - lib/tasks/ugent_deprecated.rake

- app/models/ugent/rest_user.rb

  ugent specific model
